--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,6 +54,7 @@ html{
   scroll-behavior: smooth;
 }
 body{
+  scroll-behavior: smooth;
   background-color: #121212;
   margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
