--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,7 +54,6 @@ html{
   scroll-behavior: smooth;
 }
 body{
-  scroll-behavior: smooth;
   background-color: #121212;
   margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
@@ -244,13 +243,17 @@ img{
 }
 .about__subtitle{
   margin-bottom: var(--mb-2);
+  text-align: center;
+}
+.about__text{
+  text-align: center;
 }
 .about__img{
   justify-self: center;
 }
 .about__img img{
   width: 200px;
-  border-radius: .5rem;
+  border-radius: 2.5rem;
 }
 
 /* ===== SKILLS =====*/
